change list api
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/automatic-program-repair@38308 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c